@@ -372,7 +372,7 @@ public abstract class GribServiceProvider extends AbstractIOServiceProvider {
     Range yRange = section.getRange(count++);
     Range xRange = section.getRange(count);
 
-    IndexIterator ii = dataArray.getIndexIteratorFast();
+    IndexIterator ii = dataArray.getIndexIterator();
 
     // loop over time
     for (int timeIdx = timeRange.first(); timeIdx <= timeRange.last(); timeIdx += timeRange.stride()) {
