@@ -6,6 +6,7 @@ Changes in version 4.0
 
  Release Details:
   39:
+   Array.getFastIterator is deprecated; remove use in MAMath which fails on section
    add NestedPointFeatureCollection.subset(latLonBB)
    vertical transforms OceanS modified, OceanSG1 and OceanSG2  added, thanks to Sachin Bhate and Rich Signell.
    TdsMonitor application in UI
